--- a/index.html
+++ b/index.html
@@ -9,9 +9,22 @@
 </head>
 <body>
   <div class="container">
-      <h1 class="heading" id="heading">Dad Joke Generator</h1>
-      <p class="joke" id="joke">Dad Joke</p>
-      <button class="btn" id="btn">Tell me a joke</button>
+      <h1 class="heading" id="heading">Feedback UI</h1>
+      <div class="ratings-container" id="ratings-container">
+        <div class="rating">
+          <img src="https://cdn-icons-png.flaticon.com/512/166/166527.png">
+          <small>Unhappy</small>
+        </div>
+        <div class="rating">
+          <img src="https://cdn-icons-png.flaticon.com/512/1791/1791385.png">
+          <small>Neutral</small>
+        </div>
+        <div class="rating">
+          <img src="https://cdn-icons-png.flaticon.com/512/166/166538.png">
+          <small>Satisfied</small>
+        </div>
+      </div>
+      <button class="btn" id="btn">Send Review</button>
   </div>  
   <script src="index.js"></script>
 </body>
