--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
+  <div class="container" id="container">
       <h1 class="heading" id="heading">Feedback UI</h1>
       <div class="ratings-container" id="ratings-container">
         <div class="rating">
